# Maratinelang

./: revert_patches.txt
.github/workflows/: build_portable_linux_python_packages.yml  build_windows_python_packages.yml  test_component.yml
amd/comgr/: README.md
amd/comgr/src/: comgr-compiler.cpp  comgr-env.cpp  comgr-env.h  comgr.cpp
amd/comgr/test/: CMakeLists.txt
amd/comgr/test-lit/: CMakeLists.txt  parse-isa-name.c  time-statistics.cl
amd/comgr/test-unit/: CMakeLists.txt  DemangleSymbolNameTest.cpp
clang/: CMakeLists.txt
clang/docs/: ReleaseNotes.rst
clang/lib/AST/: FormatString.cpp  PrintfFormatString.cpp  ScanfFormatString.cpp
clang/lib/Basic/: TargetInfo.cpp
clang/lib/CodeGen/: CGBuiltin.cpp  CGDebugInfo.cpp  CGExpr.cpp  CGExprAgg.cpp  CGHLSLRuntime.cpp  CodeGenFunction.h  CodeGenModule.h
clang/lib/Frontend/: CompilerInstance.cpp
clang/lib/Lex/: TextEncoding.cpp
clang/lib/Sema/: OpenCLBuiltins.td  SemaAMDGPU.cpp  SemaChecking.cpp  SemaExpr.cpp
clang/test/Headers/: __clang_hip_math.hip  wasm.c
clang/test/OpenMP/: taskloop_strictmodifier_codegen.cpp
compiler-rt/cmake/: config-ix.cmake
flang/docs/: Extensions.md
flang/test/: CMakeLists.txt
lld/ELF/: LTO.cpp
lld/docs/: ld.lld.1
llvm/docs/: AMDGPUUsage.rst  GettingInvolved.md  LangRef.rst  ProgrammersManual.md  ReleaseNotes.md  index.md
llvm/runtimes/: CMakeLists.txt
maratine/: CMakeLists.txt
maratine/lib/: MaratineCodeGen.cpp  MaratineSema.cpp
maratine/tools/: maratine-cc.cpp
maratine/tools/marabug/: CMakeLists.txt  MaraBug.cpp
offload/libomptarget/: interface.cpp
(+413 files in other folders)
